crates/serde-feather/tests/ui/unsupported_attribute.stderr
error: unsupported serde field attribute; supported attributes: `rename`, `default`, `skip`, `skip_serializing`, `skip_deserializing`, `skip_serializing_if`, `with`
 --> tests/ui/unsupported_attribute.rs:5:13
  |
5 |     #[serde(flatten)]
  |             ^^^^^^^
